--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,21 @@
 		</dependency>
 
 
+
+		<dependency>
+			<groupId>com.google.zxing</groupId>
+			<artifactId>core</artifactId>
+
+		</dependency>
+		<dependency>
+			<groupId>com.google.zxing</groupId>
+			<artifactId>javase</artifactId>
+
+		</dependency>
+
+
+
+
 	</dependencies>
 
 	<build>
